# smart-manufacturing-analytics-platform

./: .gitignore  AI_CONTEXT.md  API_SPECIFICATION.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  DATABASE_DESIGN.md  LICENSE.md  PROJECT_CHARTER.md  PROJECT_STATE.md  README.md  ROADMAP.md  SYSTEM_ARCHITECTURE.md  TECH_STACK.md
analytics/: README.md  main.py  pyproject.toml  requirements.txt
analytics/queries/executive/: yearly_kpis.sql
analytics/queries/finance/: cost_per_unit.sql
analytics/sql/: analytical_views.sql  executive_dashboard.sql  financial_dashboard.sql  inventory_dashboard.sql  kpis.sql  maintenance_dashboard.sql  materialized_views.sql  production_dashboard.sql  quality_dashboard.sql  workforce_dashboard.sql
analytics/tests/: test_kpis.py
etl/: README.md  main.py  pyproject.toml  requirements.txt
etl/config/: config.yaml  logging.yaml
etl/extract/: file_extractor.py  postgres_extractor.py
etl/load/: bulk_loader.py  warehouse_loader.py
etl/orchestration/: scheduler.py
etl/pipelines/: bronze_pipeline.py  gold_pipeline.py  master_pipeline.py  silver_pipeline.py
etl/quality/: expectations.py  quality_checks.py
etl/tests/: test_etl.py
etl/transform/: aggregations.py  business_rules.py  cleaning.py  enrichment.py  validation.py
etl/utils/: database.py  helpers.py  logger.py
synthetic_data/: README.md  main.py  pyproject.toml  requirements.txt
synthetic_data/config/: config.yaml
synthetic_data/generators/: base.py  core_entities.py  reference_data.py  telemetry.py  transactions.py
synthetic_data/loaders/: exporter.py  pg_loader.py
synthetic_data/tests/: test_generators.py
synthetic_data/utils/: db.py  logger.py
synthetic_data/validators/: schema_validator.py
(+87 files in other folders)
