[project]
name = "smap-analytics"
version = "0.1.0"
description = "Enterprise Analytics SQL Layer for Smart Manufacturing Analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "SQLAlchemy>=2.0.0",
    "pandas>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]
